[gd_scene load_steps=9 format=3 uid="uid://kldoiq4t7ana"]

[ext_resource type="Script" path="res://cenas/decoracao/comida.gd" id="1_i3bb0"]
[ext_resource type="Texture2D" uid="uid://b1st4v1o1c5bu" path="res://assets/decoracao/R.png" id="1_nuuay"]
[ext_resource type="Texture2D" uid="uid://bddeyxh24ym7m" path="res://assets/personagens/modelo_personagem/sombra.png" id="3_u8tdu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvpm1"]
size = Vector2(116, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whlax"]
size = Vector2(123, 37)

[sub_resource type="Animation" id="Animation_3j7uj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corpo:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corpo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r5ude"]
resource_name = "sumir"
length = 0.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-3, -45), Vector2(-3, -45), Vector2(-3, -45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corpo:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corpo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jvhn"]
_data = {
"RESET": SubResource("Animation_3j7uj"),
"sumir": SubResource("Animation_r5ude")
}

[node name="comida" type="StaticBody2D"]
script = ExtResource("1_i3bb0")

[node name="limite" type="CollisionShape2D" parent="."]
position = Vector2(-4, -42.5)
shape = SubResource("RectangleShape2D_xvpm1")
disabled = true

[node name="sombra" type="Sprite2D" parent="."]
position = Vector2(4, -6)
scale = Vector2(0.713675, 0.42029)
texture = ExtResource("3_u8tdu")

[node name="corpo" type="Sprite2D" parent="."]
position = Vector2(-3, -45)
scale = Vector2(0.146667, 0.147558)
texture = ExtResource("1_nuuay")

[node name="area_comida" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="shape" type="CollisionShape2D" parent="area_comida"]
position = Vector2(-3.5, -20.5)
shape = SubResource("RectangleShape2D_whlax")

[node name="anin" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jvhn")
}

[connection signal="area_entered" from="area_comida" to="." method="on_area_comida_area_entered"]
[connection signal="area_exited" from="area_comida" to="." method="on_area_comida_area_exited"]
